feat: fazendo busca por nome e exibindo no html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <input type="text" id="pokemonInput" placeholder="Digite o nome do pokemon">
     <button id="searchBtn">Buscar</button>
 
+    <div id="pokemonDisplay"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
